--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./node/app.js",
-    "sclient":"node ./node/task/sclient.js"
+    "start": "node ./server/app.js",
+    "sclient":"node ./server/task/sclient.js"
   },
   "dependencies": {
     "async": "^2.0.0-rc.3",
