--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./server/app.js",
-    "sclient":"node ./server/task/sclient.js"
+    "sclient": "node ./server/task/sclient.js"
   },
   "dependencies": {
     "async": "^2.0.0-rc.3",
@@ -15,7 +15,7 @@
     "cron": "^1.1.0",
     "debug": "~2.2.0",
     "domain": "0.0.1",
-    "ejs": "~2.3.3",
+    "ejs": "^2.5.5",
     "emoji": "^0.3.2",
     "express": "~4.13.1",
     "express-domain-middleware": "^0.1.0",
